Fix horizontal scrollbar on page transition

--- a/src/index.css
+++ b/src/index.css
@@ -53,14 +53,16 @@ footer {
   right: 15px;
 }
 
+.page-enter-done {
+  position: inherit;
+}
+
 .page-enter {
   opacity: 0;
-  transform: scale(1.1);
 }
 
 .page-enter-active {
   opacity: 1;
-  transform: scale(1);
   transition: opacity 300ms, transform 300ms;
 }
 
